--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+    <div class = "header">
+        <img src="" alt="img header" />
+        Aqui va la imagen, con el titulo
+        <div class = "menu">
+            <ul>
+                <li><a href="">INICIO</a></li>
+                <li><a href="">CATÁLOGO</a></li>
+                <li><a href="">SOBRE NOSOTROS</a></li>
+                <li><a href="">CONTACTO</a></li>
+              </ul>
+        </div>
+    </div>
+    <div class = "body">
+        añadir imagenes en panatalla que sea un silder, y cada imagen sea el viaje 
+        plaificado con destino. Al entrar pondrá todas las fechas, el plan que hay e imagenes
+
+    </div>
+    <div class = "footer">
+        <img src="" alt="imagen logo footer" />
+        <ul>
+          <li>
+            <a href=""><img src="" alt="img facebook" /></a>
+          </li>
+          <li>
+            <a href=""><img src="" alt="imagen twitter" /></a>
+          </li>
+          <li>
+            <a href=""><img src="" alt="img linkedin" /></a>
+          </li>
+        </ul>
+        <p>&copy; 2024 Viatges Cascino S.L.U</p>
+    </div>
     
 </body>
 </html>
