HTML, CSS e imgenes

--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <div class = "header">
-        <img src="" alt="img header" />
-        Aqui va la imagen, con el titulo
-        <div class = "menu">
-            <ul>
-                <li><a href="">INICIO</a></li>
-                <li><a href="">CATÁLOGO</a></li>
-                <li><a href="">SOBRE NOSOTROS</a></li>
-                <li><a href="">CONTACTO</a></li>
-              </ul>
-        </div>
-    </div>
+  <header>
+    <img src="img/logo_principal.png" alt="img header" />
+    Aqui va la imagen, con el titulo, añadir los botones de los dos idiomas al final, botones en formato de imagen con su respectiva bandera Esapaña y Francia"
+  </header>
+  <nav>
+      <ul>
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Destinaciones</a></li>
+        <li><a href="">Transporte</a></li>
+        <li><a href="">Hoteles</a></li>
+        <li><a href="">Sobre nosotros</a></li>
+        <li><a href="">Contacto</a></li>
+      </ul>
+  </nav>
+  <main>
+    dentro de main
+    <aside>este es el aside</aside>
+    <section>esto es una seccion
+      <article>este es un articulo</article>
+    </section>
+
+  </main>
+    
     <div class = "body">
         añadir imagenes en panatalla que sea un silder, y cada imagen sea el viaje 
         plaificado con destino. Al entrar pondrá todas las fechas, el plan que hay e imagenes
