--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
             presupuestos.
           </p>
         </div>
-        <a href="catalogo.pdf" class="download-btn" download>Descargar Catálogo</a>
+        <div class="download-btn">
+          <p>Descárguese el</p>
+          <h3>Catálogo 2025</h3>
+          <!--INCLUIR ICONO DESCARGA Y DESCARGA DEL CATOLOGO??-->
+          </div>
       </div>
     </main>
 
