--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
       <a href="#">
         <img src="img/logo_principal.png" alt="Logo de Viajes Cascino" />
       </a>
 
+      <!--Aparatado de botoes de cambio de idioma-->
+      <!--Hace falta ajustar las banderas para que se mantengan arriba derecha-->
+      <!-- Imagen pequena al hacerse la pantalla mas peque?-->
       <div class="language-switcher">
         <a href="#">
           <img src="img/FrenchFlag.png" alt="" class="flag" />
@@ -21,7 +25,12 @@
         </a>
       </div>
     </header>
+
+    <!-- Menu de navegación -->
+    <!-- Hace falta cambiar el tema de menu que sea una hamburgesa-->
+    <!--Ajustar el menu en la izqueirda, al lado del logo-->
     <button id="menuToggle">Menu</button>
+    <!--Arregalr el dropdown, que salga desde la caja y no del texto-->
     <nav>
       <ul>
         <li><a href="">Inicio</a></li>
@@ -42,27 +51,33 @@
           </div>
         </li>
         <li><a href="">Hoteles</a></li>
-        <li><a href="">Sobre nosotros</a></li>
+        <li><a href="">La agencia</a></li>
+        <!-- Sobre nosotros / La agencia-->
         <li><a href="pag/contacto.html">Contacto</a></li>
       </ul>
     </nav>
     <main>
+      <!-- Carousel -->
+      <!--Anadir 2 elementos mas-->
       <div class="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/HotelDonJuan.jpg" alt="Viaje 1" />
+            <!--Hacer que los textos aparezcan en las imagenes en la parte inferior con una tira translucida negra-->
             <p>Hotel Don Juan **** - Lloret de Mar</p>
           </div>
           <div class="carousel-item">
             <img src="img/HotelLellaBaya.jpg" alt="Viaje 2" />
             <p>Hotel Lella Baya**** - Hammamet</p>
           </div>
-          <!--ANADIR ALGUNA IMAGEN MAS?-->
         </div>
         <button class="carousel-control prev">&lt;</button>
         <button class="carousel-control next">&gt;</button>
       </div>
 
+      <!-- Promociones -->
+      <!--Arreglar h2, queda como muy por alli-->
+      <!--Anadir 1 promocion mas-->
       <h2>PROMOCIONES</h2>
       <div class="promotions">
         <div class="promotion-item">
@@ -83,79 +98,89 @@
           <p>4 días, 3 noches</p>
           <p><strong>Precio: 249€</strong></p>
         </div>
+        <div class="promotion-item">
+          <img src="img/MercadoNavideno.jpg" alt="Promoción 4" />
+          <h3>PROMOCION EXTRA</h3>
+          <p>4 días, 3 noches</p>
+          <p><strong>Precio: 249€</strong></p>
+        </div>
       </div>
 
+      <!-- Bienvenida -->
+      <!-- Capaz anadir alguna cosa y que ocupe un poco mas de pantalla en lo ancho -->
       <div class="welcome-section">
         <div>
           <h2>¡Bienvenidos a Viajes Cascino!</h2>
           <p>
-            Somos especialistas en la organización de viajes en autobús con salida
-            desde el sur de Francia y España. Nuestro objetivo es ofrecer
+            Somos especialistas en la organización de viajes en autobús con
+            salida desde el sur de Francia y España. Nuestro objetivo es ofrecer
             experiencias de viaje memorables adaptadas a todo tipo de grupos y
             presupuestos.
           </p>
         </div>
         <div class="download-btn">
-          <p>Descárguese el</p>
+          <p>Descarga</p>
           <h3>Catálogo 2025</h3>
           <!--INCLUIR ICONO DESCARGA Y DESCARGA DEL CATOLOGO??-->
-          </div>
+        </div>
       </div>
     </main>
 
+    <!-- Footer -->
+    <!-- Hacer el footer mas peque y distribuir diferente los textos-->
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-logo">
+          <!--Incluir imagen del logo totalmente blanca-->
           <img src="img/logo_footer.png" alt="Logo de Viajes Cascino" />
         </div>
         <div class="footer-info">
-          <p>Contacto: info@viajescascino.com</p>
-          <p>Teléfono: +34 123 456 789</p>
+          <p>yohan@viatgescascino.fr</p>
+          <p>0033 662 80 89 08</p>
           <p>Dirección: Calle Falsa 123, Barcelona, España</p>
         </div>
       </div>
       <div class="footer-bottom">
         <p>&copy; 2025 Viatges Cascino S.L.U</p>
       </div>
+      <!--Anadir dos botones
+      Aviso legal
+      Uso de cookies-->
     </footer>
 
     <script>
-      const menuToggle = document.getElementById("menuToggle");
-      const navMenu = document.querySelector("nav ul");
+      document.addEventListener("DOMContentLoaded", () => {
+        const menuToggle = document.getElementById("menuToggle");
+        const navMenu = document.querySelector("nav ul");
 
-      // Evento para alternar la visibilidad del menu principal
-      menuToggle.addEventListener("click", () => {
-        navMenu.classList.toggle("active");
-      });
-
-      // Añadir funcionalidad a los dropdowns en pantallas pequeñas
-      document.querySelectorAll(".dropdown > .dropbtn").forEach((btn) => {
-        btn.addEventListener("click", (e) => {
-          e.preventDefault();
-          btn.nextElementSibling.classList.toggle("active");
+        // Alternar menú en móviles
+        menuToggle.addEventListener("click", () => {
+          navMenu.classList.toggle("active");
         });
-      });
 
-      const carousel = document.querySelector(".carousel-inner");
-      const items = document.querySelectorAll(".carousel-item");
-      const prevButton = document.querySelector(".carousel-control.prev");
-      const nextButton = document.querySelector(".carousel-control.next");
+        // Carrusel
+        const carousel = document.querySelector(".carousel-inner");
+        const items = document.querySelectorAll(".carousel-item");
+        const prevButton = document.querySelector(".carousel-control.prev");
+        const nextButton = document.querySelector(".carousel-control.next");
+        let currentIndex = 0;
 
-      let currentIndex = 0;
+        function updateCarousel() {
+          const offset = -currentIndex * 100;
+          carousel.style.transform = `translateX(${offset}%)`;
+        }
 
-      function updateCarousel() {
-        const offset = -currentIndex * 100; // Mover por porcentaje
-        carousel.style.transform = `translateX(${offset}%)`;
-      }
+        prevButton.addEventListener("click", () => {
+          currentIndex =
+            currentIndex === 0 ? items.length - 1 : currentIndex - 1;
+          updateCarousel();
+        });
 
-      prevButton.addEventListener("click", () => {
-        currentIndex = currentIndex === 0 ? items.length - 1 : currentIndex - 1;
-        updateCarousel();
-      });
-
-      nextButton.addEventListener("click", () => {
-        currentIndex = currentIndex === items.length - 1 ? 0 : currentIndex + 1;
-        updateCarousel();
+        nextButton.addEventListener("click", () => {
+          currentIndex =
+            currentIndex === items.length - 1 ? 0 : currentIndex + 1;
+          updateCarousel();
+        });
       });
     </script>
   </body>
