Added a promotion to show expample of it
Still needs updates, the basic is there

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
       <!-- Promociones -->
       <h2 class="promotions-title">PROMOCIONES</h2>
       <div class="promotions">
-        <div class="promotion-item">
-          <img src="img/CarnavalEnVenecia.jpg" alt="Promoción 1" />
+        <a href="pag/promotionCarnaval.html" class="promotion-item">
+          <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
           <h3>CARNAVAL EN VENECIA</h3>
           <p>4 días, 3 noches</p>
-          <p><strong>Precio: 249€</strong></p>
-        </div>
+          <p><strong>Precio: 430€</strong></p>
+        </a>
         <div class="promotion-item">
           <img src="img/Portaventura.png" alt="Promoción 2" />
           <h3>PORTAVENTURA</h3>
