Main logo, dropdown fixed, main sticky, menu small

--- a/pag/contacto.html
+++ b/pag/contacto.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <a href="/index.html">
-        <img src="/img/Viatges-Cascino.png" alt="Logo" class="logo" />
+        <img src="../img/Viatges-Cascino.png" alt="Logo" class="logo" />
       </a>
       <!--Aparatado de botoes de cambio de idioma-->
       <div class="language-switcher">
@@ -24,7 +24,11 @@
 
     <!-- Menu de navegación -->
     <!-- Hace falta cambiar el tema de menu que sea una hamburgesa-->
-    <button id="menuToggle">Menu</button>
+    <button id="menuToggle">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>    
     <!--Arregalr el dropdown, que salga desde la caja y no del texto-->
     <nav>
       <ul>
@@ -91,6 +95,6 @@
       </div>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
