--- a/pag/promotionCarnaval.html
+++ b/pag/promotionCarnaval.html
@@ -23,8 +23,11 @@
     </header>
 
     <!-- Menu de navegación -->
-    <!-- Hace falta cambiar el tema de menu que sea una hamburgesa-->
-    <button id="menuToggle">Menu</button>
+    <button id="menuToggle">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>    
     <!--Arregalr el dropdown, que salga desde la caja y no del texto-->
     <nav>
       <ul>
@@ -129,6 +132,6 @@
       </div>
     </footer>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
