--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     </header>
 
     <!-- Menu de navegación -->
-    <!-- Hace falta cambiar el tema de menu que sea una hamburgesa-->
-    <button id="menuToggle">Menu</button>
+    <button id="menuToggle">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>    
     <!--Arregalr el dropdown, que salga desde la caja y no del texto-->
     <nav>
       <ul>
