--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
           <p>4 días, 3 noches</p>
           <p><strong>Precio: 430€</strong></p>
         </a>
-        <div class="promotion-item">
+        <a href="" class="promotion-item">
           <img src="img/Portaventura.png" alt="Promoción 2" />
           <h3>PORTAVENTURA</h3>
           <p>4 días, 3 noches</p>
           <p><strong>Precio: 299€</strong></p>
-        </div>
-        <div class="promotion-item">
+        </a>
+        <a href="" class="promotion-item">
           <img src="img/MercadoNavideno.jpg" alt="Promoción 3" />
           <h3>MERCADO NAVIDEÑO EN COSTA BRAVA</h3>
           <p>4 días, 3 noches</p>
           <p><strong>Precio: 249€</strong></p>
-        </div>
-        <div class="promotion-item">
+        </a>
+        <a href="" class="promotion-item">
           <img src="img/PlayaDeAro.jpg" alt="Promoción 4" />
           <h3>PLAYA DE ARO</h3>
           <p>6 días, 5 noches</p>
           <p><strong>Precio: 349€</strong></p>
-        </div>
+        </a>
       </div>
 
       <!-- Bienvenida -->
