--- a/pag/promotionCarnaval.html
+++ b/pag/promotionCarnaval.html
@@ -67,7 +67,7 @@
       <!-- Información basica -->
       <div class="info-basica">
         <p><strong>Duración:</strong> 4 días del 21 al 24 de febrero de 2025</p>
-        <p><strong>Precio:</strong> 430€</p>
+        <p class="precio"><strong>Precio:</strong> 430€</p>
       </div>
 
       <!-- Itinerario -->
@@ -89,24 +89,30 @@
           </div>
         </div>
 
-        <div class="dia">
-          <h3>
-            DÍA 2: MURANO / BURANO / CARNAVAL DE VENECIA Y LA FIESTA DE LAS
-            MARÍAS
-          </h3>
-          <p>
-            Después del desayuno, nos embarcaremos con guía en un vaporetto
-            privado hacia Murano, conocida por sus legendarios maestros
-            vidrieros. A continuación, visitaremos Burano, famosa por sus
-            encajes y sus pintorescas casas de colores. Almorzaremos en el
-            restaurante «Le Raspo de UA», especializado en pescado, con bebidas
-            incluidas. Posteriormente, disfrutaremos de tiempo libre en Venecia
-            para vivir la FIESTA DE LAS MARÍAS, que da inicio oficial al
-            Carnaval de Venecia. Por la tarde, regresaremos en vaporetto a Punta
-            Sabbioni y, finalmente, al hotel, donde nos espera la cena (incluye
-            bebida) y alojamiento.
-          </p>
+        <div class="dia con-imagen">
+          <div class="texto">
+            <h3>
+              DÍA 2: MURANO / BURANO / CARNAVAL DE VENECIA Y LA FIESTA DE LAS
+              MARÍAS
+            </h3>
+            <p>
+              Después del desayuno, nos embarcaremos con guía en un vaporetto
+              privado hacia Murano, conocida por sus legendarios maestros
+              vidrieros. A continuación, visitaremos Burano, famosa por sus
+              encajes y sus pintorescas casas de colores. Almorzaremos en el
+              restaurante «Le Raspo de UA», especializado en pescado, con bebidas
+              incluidas. Posteriormente, disfrutaremos de tiempo libre en Venecia
+              para vivir la FIESTA DE LAS MARÍAS, que da inicio oficial al
+              Carnaval de Venecia. Por la tarde, regresaremos en vaporetto a Punta
+              Sabbioni y, finalmente, al hotel, donde nos espera la cena (incluye
+              bebida) y alojamiento.
+            </p>
+          </div>
+          <div class="imagen">
+            <img src="/img/restauranteABurano.jpg" alt="Día 2 - Restaurante" />
+          
         </div>
+      </div>
 
         <div class="dia">
           <h3>DÍA 3: LIDO DI JESOLO / CARNAVAL DE VENECIA</h3>
