Trying to adapt for responsive

--- a/index.html
+++ b/index.html
@@ -92,6 +92,36 @@
 
       <!-- Promociones -->
       <h2 class="promotions-title">PROMOCIONES</h2>
+      <div class="promotions-carousel">
+        <div class="carousel-wrapper">
+          <a href="pag/promotionCarnaval.html" class="promotion-itemP">
+            <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
+            <h3>CARNAVAL EN VENECIA</h3>
+            <p>4 días, 3 noches</p>
+            <p><strong>Precio: 430€</strong></p>
+          </a>
+          <a href="" class="promotion-itemP">
+            <img src="img/Portaventura.png" alt="Promoción 2" />
+            <h3>PORTAVENTURA</h3>
+            <p>4 días, 3 noches</p>
+            <p><strong>Precio: 299€</strong></p>
+          </a>
+          <a href="" class="promotion-itemP">
+            <img src="img/MercadoNavideno.jpg" alt="Promoción 3" />
+            <h3>MERCADO NAVIDEÑO EN COSTA BRAVA</h3>
+            <p>4 días, 3 noches</p>
+            <p><strong>Precio: 249€</strong></p>
+          </a>
+          <a href="" class="promotion-itemP">
+            <img src="img/PlayaDeAro.jpg" alt="Promoción 4" />
+            <h3>PLAYA DE ARO</h3>
+            <p>6 días, 5 noches</p>
+            <p><strong>Precio: 349€</strong></p>
+          </a>
+        </div>
+        <button class="carousel-control prevP">&lt;</button>
+        <button class="carousel-control nextP">&gt;</button>
+      </div>
       <div class="promotions">
         <a href="pag/promotionCarnaval.html" class="promotion-item">
           <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
@@ -118,6 +148,7 @@
           <p><strong>Precio: 349€</strong></p>
         </a>
       </div>
+      
 
       <!-- Bienvenida -->
       <div class="welcome-section">
