box sizes adapt on small screens

--- a/pag/promotionCarnaval.html
+++ b/pag/promotionCarnaval.html
@@ -100,19 +100,18 @@
               privado hacia Murano, conocida por sus legendarios maestros
               vidrieros. A continuación, visitaremos Burano, famosa por sus
               encajes y sus pintorescas casas de colores. Almorzaremos en el
-              restaurante «Le Raspo de UA», especializado en pescado, con bebidas
-              incluidas. Posteriormente, disfrutaremos de tiempo libre en Venecia
-              para vivir la FIESTA DE LAS MARÍAS, que da inicio oficial al
-              Carnaval de Venecia. Por la tarde, regresaremos en vaporetto a Punta
-              Sabbioni y, finalmente, al hotel, donde nos espera la cena (incluye
-              bebida) y alojamiento.
+              restaurante «Le Raspo de UA», especializado en pescado, con
+              bebidas incluidas. Posteriormente, disfrutaremos de tiempo libre
+              en Venecia para vivir la FIESTA DE LAS MARÍAS, que da inicio
+              oficial al Carnaval de Venecia. Por la tarde, regresaremos en
+              vaporetto a Punta Sabbioni y, finalmente, al hotel, donde nos
+              espera la cena (incluye bebida) y alojamiento.
             </p>
           </div>
           <div class="imagen">
             <img src="/img/restauranteABurano.jpg" alt="Día 2 - Restaurante" />
-          
+          </div>
         </div>
-      </div>
 
         <div class="dia">
           <h3>DÍA 3: LIDO DI JESOLO / CARNAVAL DE VENECIA</h3>
