--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="line"></span>
       <span class="line"></span>
       <span class="line"></span>
-    </button>    
+    </button>
     <!--Arregalr el dropdown, que salga desde la caja y no del texto-->
     <nav>
       <ul>
@@ -90,87 +90,88 @@
         <button class="carousel-control next">&gt;</button>
       </div>
 
-      <!-- Promociones -->
-      <h2 class="promotions-title">PROMOCIONES</h2>
-      <div class="promotions-carousel">
-        <div class="carousel-wrapper">
-          <a href="pag/promotionCarnaval.html" class="promotion-itemP">
+      <div class="welcome-and-promotions">
+        <!-- Promociones -->
+        <h2 class="promotions-title">PROMOCIONES</h2>
+        <div class="promotions-carousel">
+          <div class="carousel-wrapper">
+            <a href="pag/promotionCarnaval.html" class="promotion-itemP">
+              <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
+              <h3>CARNAVAL EN VENECIA</h3>
+              <p>4 días, 3 noches</p>
+              <p><strong>Precio: 430€</strong></p>
+            </a>
+            <a href="" class="promotion-itemP">
+              <img src="img/Portaventura.png" alt="Promoción 2" />
+              <h3>PORTAVENTURA</h3>
+              <p>4 días, 3 noches</p>
+              <p><strong>Precio: 299€</strong></p>
+            </a>
+            <a href="" class="promotion-itemP">
+              <img src="img/MercadoNavideno.jpg" alt="Promoción 3" />
+              <h3>MERCADO NAVIDEÑO EN COSTA BRAVA</h3>
+              <p>4 días, 3 noches</p>
+              <p><strong>Precio: 249€</strong></p>
+            </a>
+            <a href="" class="promotion-itemP">
+              <img src="img/PlayaDeAro.jpg" alt="Promoción 4" />
+              <h3>PLAYA DE ARO</h3>
+              <p>6 días, 5 noches</p>
+              <p><strong>Precio: 349€</strong></p>
+            </a>
+          </div>
+          <button class="carousel-control prevP">&lt;</button>
+          <button class="carousel-control nextP">&gt;</button>
+        </div>
+        <div class="promotions">
+          <a href="pag/promotionCarnaval.html" class="promotion-item">
             <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
             <h3>CARNAVAL EN VENECIA</h3>
             <p>4 días, 3 noches</p>
             <p><strong>Precio: 430€</strong></p>
           </a>
-          <a href="" class="promotion-itemP">
+          <a href="" class="promotion-item">
             <img src="img/Portaventura.png" alt="Promoción 2" />
             <h3>PORTAVENTURA</h3>
             <p>4 días, 3 noches</p>
             <p><strong>Precio: 299€</strong></p>
           </a>
-          <a href="" class="promotion-itemP">
+          <a href="" class="promotion-item">
             <img src="img/MercadoNavideno.jpg" alt="Promoción 3" />
             <h3>MERCADO NAVIDEÑO EN COSTA BRAVA</h3>
             <p>4 días, 3 noches</p>
             <p><strong>Precio: 249€</strong></p>
           </a>
-          <a href="" class="promotion-itemP">
+          <a href="" class="promotion-item">
             <img src="img/PlayaDeAro.jpg" alt="Promoción 4" />
             <h3>PLAYA DE ARO</h3>
             <p>6 días, 5 noches</p>
             <p><strong>Precio: 349€</strong></p>
           </a>
         </div>
-        <button class="carousel-control prevP">&lt;</button>
-        <button class="carousel-control nextP">&gt;</button>
-      </div>
-      <div class="promotions">
-        <a href="pag/promotionCarnaval.html" class="promotion-item">
-          <img src="img/CarnavalEnVenecia.jpg" alt="Carnaval en Venecia" />
-          <h3>CARNAVAL EN VENECIA</h3>
-          <p>4 días, 3 noches</p>
-          <p><strong>Precio: 430€</strong></p>
-        </a>
-        <a href="" class="promotion-item">
-          <img src="img/Portaventura.png" alt="Promoción 2" />
-          <h3>PORTAVENTURA</h3>
-          <p>4 días, 3 noches</p>
-          <p><strong>Precio: 299€</strong></p>
-        </a>
-        <a href="" class="promotion-item">
-          <img src="img/MercadoNavideno.jpg" alt="Promoción 3" />
-          <h3>MERCADO NAVIDEÑO EN COSTA BRAVA</h3>
-          <p>4 días, 3 noches</p>
-          <p><strong>Precio: 249€</strong></p>
-        </a>
-        <a href="" class="promotion-item">
-          <img src="img/PlayaDeAro.jpg" alt="Promoción 4" />
-          <h3>PLAYA DE ARO</h3>
-          <p>6 días, 5 noches</p>
-          <p><strong>Precio: 349€</strong></p>
-        </a>
-      </div>
-      
 
-      <!-- Bienvenida -->
-      <div class="welcome-section">
-        <div>
-          <h2>¡Bienvenidos a Viajes Cascino!</h2>
-          <p>
-            Somos especialistas en la organización de viajes en autocar desde el
-            sur de Francia y España. Ofrecemos estancias a precios asequibles,
-            circuitos, cruceros, viajes temáticos como Port Aventura, Disney,
-            así como eventos deportivos y organización de torneos (fútbol,
-            voleibol, etc.). También organizamos seminarios y viajes por toda
-            Europa. Si perteneces a una asociación, un club, un comité de
-            empresa o un grupo de amigos, podemos realizar un estudio
-            personalizado para ti.
-          </p>
-          <p>Estamos a tu disposición para cualquier consulta.</p>
-          <p>¡Hasta pronto!</p>
-        </div>
-        <div class="download-btn">
-          <p>Descarga</p>
-          <h3>Catálogo 2025</h3>
-          <img src="/img/IconoDescarga.png" alt="" class="iconDownload" />
+        <!-- Bienvenida -->
+        <div class="welcome-section">
+          <div>
+            <h2>¡Bienvenidos a Viajes Cascino!</h2>
+            <p>
+              Somos especialistas en la organización de viajes en autocar desde
+              el sur de Francia y España. Ofrecemos estancias a precios
+              asequibles, circuitos, cruceros, viajes temáticos como Port
+              Aventura, Disney, así como eventos deportivos y organización de
+              torneos (fútbol, voleibol, etc.). También organizamos seminarios y
+              viajes por toda Europa. Si perteneces a una asociación, un club,
+              un comité de empresa o un grupo de amigos, podemos realizar un
+              estudio personalizado para ti.
+            </p>
+            <p>Estamos a tu disposición para cualquier consulta.</p>
+            <p>¡Hasta pronto!</p>
+          </div>
+          <div class="download-btn">
+            <p>Descarga</p>
+            <h3>Catálogo 2025</h3>
+            <img src="/img/IconoDescarga.png" alt="" class="iconDownload" />
+          </div>
         </div>
       </div>
     </main>
