--- a/pag/contacto.html
+++ b/pag/contacto.html
@@ -56,9 +56,9 @@
       </ul>
     </nav>
 
-    <main>
+    <main class="contacto">
       <div class="contact-title">
-        <h2>Contacto</h2>
+        <h2>CONTACTO</h2>
       </div>
       <div class="contact-box">
         <!-- Texto a la izquierda -->
